force-app/main/default/objects/GroupChatterGroupAssotiation__c/GroupChatterGroupAssotiation__c.object-meta.xml
<CustomObject>
    <label>Working Group Membership</label>
    <nameField>
        <displayFormat>IGM-{0000}</displayFormat>
        <label>Group Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Working Group Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>