force-app/main/default/objects/GroupChatterGroupAssotiation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Working Group Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Working Groups</relationshipLabel>
    <relationshipName>GroupChatterGroupAssotiations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>