force-app/main/default/objects/GroupChatterGroupAssotiation__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Contact/&quot;&amp;Contact__r.Id&amp;&quot;/view&quot;, Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName, &quot;_self&quot;)</formula>
    <label>Internal Group Member Name</label>
    <type>Text</type>
</CustomField>