force-app/main/default/objects/GroupChatterGroupAssotiation__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>