force-app/main/default/objects/GroupChatterGroupAssotiation__c/fields/Internal_Group_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Internal_Group_Record_Type__c</fullName>
    <formula>Group__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Group Record Type</label>
    <type>Text</type>
</CustomField>