force-app/main/default/objects/GroupChatterGroupAssotiation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Officer</fullName>
            </value>
            <value>
                <fullName>Alzheimer Europe representative</fullName>
            </value>
            <value>
                <fullName>Assistant Editor</fullName>
            </value>
            <value>
                <fullName>Associate Editor</fullName>
            </value>
            <value>
                <fullName>Book Review Editor</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>CME Editor</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Chair Communication Committee</fullName>
            </value>
            <value>
                <fullName>Chair Education Committee</fullName>
            </value>
            <value>
                <fullName>Chair Programme Committee</fullName>
            </value>
            <value>
                <fullName>Chair Scientific Committee</fullName>
            </value>
            <value>
                <fullName>Chair Teaching Course sub-Committee</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>EANO representative</fullName>
            </value>
            <value>
                <fullName>EAPC representative</fullName>
            </value>
            <value>
                <fullName>EC-IFCN representative</fullName>
            </value>
            <value>
                <fullName>ECTRIMS representative</fullName>
            </value>
            <value>
                <fullName>EFAS representative</fullName>
            </value>
            <value>
                <fullName>EFIC representative</fullName>
            </value>
            <value>
                <fullName>EFNR representative</fullName>
            </value>
            <value>
                <fullName>EHF representative</fullName>
            </value>
            <value>
                <fullName>EQTF Representative</fullName>
            </value>
            <value>
                <fullName>ESO representative</fullName>
            </value>
            <value>
                <fullName>Editor-in-Chief</fullName>
            </value>
            <value>
                <fullName>Ethics Advisor</fullName>
            </value>
            <value>
                <fullName>EuGMS representative</fullName>
            </value>
            <value>
                <fullName>Ex-officio member</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>GroupAdmin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>