force-app/main/default/objects/GroupChatterGroupAssotiation__c/fields/Type_of_Group__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Group__c</fullName>
    <label>Type of Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>