force-app/main/default/objects/GroupChatterGroupAssotiation__c/recordTypes/Administration.recordType-meta.xml
<RecordType>
    <fullName>Administration</fullName>
    <active>true</active>
    <label>Administration</label>
</RecordType>