force-app/main/default/objects/GroupChatterGroupAssotiation__c/recordTypes/Journal_Editorial_Board.recordType-meta.xml
<RecordType>
    <fullName>Journal_Editorial_Board</fullName>
    <active>true</active>
    <label>Journal Editorial Board</label>
</RecordType>