force-app/main/default/objects/GroupChatterGroupAssotiation__c/recordTypes/Level_2_Working_Group_Committee.recordType-meta.xml
<RecordType>
    <fullName>Level_2_Working_Group_Committee</fullName>
    <active>true</active>
    <label>Level 2 Working Group (Committee)</label>
</RecordType>