force-app/main/default/objects/GroupChatterGroupAssotiation__c/recordTypes/Level_3_Working_Group.recordType-meta.xml
<RecordType>
    <fullName>Level_3_Working_Group</fullName>
    <active>true</active>
    <label>Level 3 Working Group</label>
</RecordType>