force-app/main/default/objects/GroupChatterGroupAssotiation__c/recordTypes/Level_4_Working_Group_Taskforce.recordType-meta.xml
<RecordType>
    <fullName>Level_4_Working_Group_Taskforce</fullName>
    <active>true</active>
    <label>Level 4 Working Group (Taskforce)</label>
</RecordType>