force-app/main/default/objects/GroupChatterGroupAssotiation__c/recordTypes/Press.recordType-meta.xml
<RecordType>
    <fullName>Press</fullName>
    <active>false</active>
    <label>Press</label>
</RecordType>