force-app/main/default/objects/GroupChatterGroupAssotiation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Group__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Role__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>deleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All non-deleted Internal Group Members</label>
</ListView>