force-app/main/default/objects/GroupChatterGroupAssotiation__c/listViews/All_Deleted.listView-meta.xml
<ListView>
    <fullName>All_Deleted</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Deleted</label>
</ListView>