force-app/main/default/objects/GroupChatterGroupAssotiation__c/listViews/EAN_Board_Members.listView-meta.xml
<ListView>
    <fullName>EAN_Board_Members</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>deleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GroupChatterGroupAssotiation__c.Level_1_Board_EAN_Board</value>
    </filters>
    <label>EAN Board Members</label>
</ListView>